# nixosmgr

./: .gitignore  LICENSE  README.md  dune-project  nixosmgr.opam
lib/: add_package.ml  add_package.mli  cli.ml  cli.mli  dune  nix_printer.ml  nix_printer.mli  system.ml  system.mli
test/: dune
